--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --hover-color:rgb(128, 223, 146); 
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#nav-bar{
+  font-family: 'Cedarville Cursive', cursive, sans-serif;
+  font-size: 20px;
+  background-color: rgba(0,0,0,0);
+  position: fixed;
+  width: 200px;
+  right: -10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
+  justify-items: center;
+  align-items: flex-end; 
+}
+.nav-item{
+  padding: 10px 20px 10px 20px;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+.nav-item:hover{
+  background-color: var(--hover-color);
+}
+h1{
+  font-family: 'Cedarville Cursive', cursive, sans-serif;
+  font-size: 80px;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.logo{
+  border-radius: 50%;
+  border: 2px solid black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div{
+  /* border: 2px solid black; */
+}
+h2{
+  margin: 0;
 }
